--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,323 @@
-.App {
-  text-align: center;
+#container{
+  background-color: #f7f8f8;
+  
+}
+.container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  align-items: center; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.image2{
+  width: 80px;
+  height: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.name{
+  width: 40px;
+  height: 20px; 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.upper-container{
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  margin-top: 10px;
+  
+
+}
+#car-icon{
+  margin-left: 50px;
+  
+}
+
+#car-icon:hover{
+  color: skyblue;
+  cursor: pointer;
+  
+}
+#car-icon span{
+   color: black; 
+
+}
+#car-icon h6{
+margin-top: 5px;
+
+}
+
+.bottom-container{
+  margin: 20px 0px;
+  width: 90%;
+  margin-bottom: 5px;
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;  
+}
+.inputDrop{
+  margin-left: 8px;
+}
+
+.search{
+  width: 20vw;
+}
+#demo-simple-select{
+  width: 18vw;
+
+  
+  
+}
+
+#form-div{
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0px;
+  border: 2px solid black;
+
+}
+
+
+
+#input{
+  margin-right: 0px !important;  
+  border: none !important;
+  
+  padding: 20px !important;
+}
+
+#span{
+  margin: 0px;
+  width: 40px;
+  height: 40px;
+  border: black;
+  padding: 6px 9px;
+}
+#login-btn{
+  background: none;
+  font-weight: 700;
+  border: 0px;
+  border-bottom: 2px solid black;
+  margin: 15px;
+  
+}
+
+#sellspan {
+  font-weight: 700;
+}
+
+
+#btn-1{
+  display: flex;
+  justify-content: flex-start;
+  border: none;
+  background: none;
+}
+#img-div{
+  display: flex;
+  position: absolute;
+  right: 5rem;
+  top: 4.6rem;
+
+}
+
+.but {
+  cursor: pointer;
+  flex-direction: column;
+}
+
+.but:hover {
+  background-color: #002f34;
+}
+
+#dropDown{
+  border: none !important;
+}
+#container1{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
+}
+
+#inner-div{
+  display: flex;
+  justify-content: flex-start;
+  width: 80%;
+  
+}
+
+#link-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 100%;
+  margin-top: 20px;
+}
+
+#link-div span{
+  margin-left: 15px;
+  font-weight: 400;
+}
+
+#link-div span:hover{
+  color: blue;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+#card-div{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  flex-direction: column;
+
+}
+
+#inner-card-div{
+  display: flex;
+  justify-content: center;
+  width: 95%;
+  flex-wrap: wrap;
+}
+
+.para{
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  background: #f7f4f4;
+  margin-top: 30px;
+}
+
+.inner-footer-div{
+  display: flex;
+  width: 70%;
+  
+  
+}
+
+#icon-div{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items:baseline;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  margin-left: 40px;
+
+}
+
+#div-icon{
+  display: flex;
+  flex-direction: row ;
+  
+  
+}
+#div-icon img{
+
+  margin-left: 7px;
+  
+}
+#img1{
+  margin: 0px !important;
+}
+
+#footer-para{
+  font-weight: 800;
+}
+
+#table-div{
+  display: flex;
+  justify-content: center;
+  background-color: #f1eeee;
+  border-top: 1px solid grey;
+}
+
+.table-div{
+  display: flex;
+  width: 90%;
+  margin-top: 20px;
+  
+  
+}
+
+fieldset {
+  border: none !important;
+}
+
+ul{
+  list-style: none;
+}
+.inner-table{
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+.inner-table span{
+  font-weight: 700;
+}
+.inner-table li{
+  font-weight: 300;
+
+}
+.inner-table li:hover{
+  cursor: pointer;
+  font-weight: 500;
+  
+}
+
+.table{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.inner-table div{
+  margin-left: 50px;
+}
+
+.feedBack{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+
+
+.feedback-content-data span{
+  font-weight: 650;
+  margin-left: 10px;
+}
+.feedback-content-data img{
+  margin-left: 10px;
+}
+
+.feedbackIcon{
+  margin-top: 30px;
+}
+
+#foot-container{
+  background-color: #002f34;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 10vh;
+}
+
+#foot-content{
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+  align-items: center;
+}
+#foot-content span{
   color: white;
-}
+  font-weight: 700;
+  font-size: 14px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
